# RegicideRL

./: .gitignore  ACTOR_CRITIC_UPDATE_SUMMARY.md  LICENSE  README.md  TESTING.md  TO DO.MD  action_handler.py  action_space_analyzer.py  analyze_search_space.py  archive_file_temp  bc_data.npz  bench_action_handler.py  benchmark.py  benchmark_device.py  benchmark_search.py  benchmark_worker.py  card_aware_policy.py  config.py  config.yaml  config_test.yaml  control_panel.pyw  debug_loop.py  enhanced_training_example.py  envstats  logger_config.yaml  policy_analysis.py  ppo_training.py  profile.prof  profile.txt  profile_v2.prof  pyproject.toml  quick_policy_analysis.py  random_policy_evaluation.py  regicide.py  regicide_gym_env.py  requirements.txt  restats  restructure.py  run_perfect_solver.py  streamlined_training.py  (+5 more)
agents/: __init__.py  alphazero_agent.py  base_agent.py  heuristic_agent.py  ismcts_agent.py  pimc_agent.py  ppo_agent.py  random_agent.py
control_panel/: __init__.py  __main__.py  app.py  configuration.py  jobs.py  models.py  registry.py  repository.py  server.py
docs/: DOCUMENTATION.md  agents.html  experimental_report.md  game.html  index.html  ismcts_explained.html  ml_logger.html  ml_logger.md  regicide-ai-routes.html  search.js
game/: __init__.py  action_handler.py  action_space.py  regicide.py  test_new_flow.py
integrations/: __init__.py  regicide_logging.py
legacy/: basic_test.py  detailed_game_inspector.py
logs/: game_runs.jsonl
ml_logger/: README.md  __init__.py  events.py  recording.py  runtime.py  serialization.py  storage.py  (+2 more)
(+395 files in other folders)
