[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modin-ml-logger"
version = "0.3.0"
description = "Local-first, configurable experiment logging for ML workflows"
readme = "docs/ml_logger.md"
requires-python = ">=3.10"
dependencies = [
  "psutil>=5.9",
  "PyYAML>=6",
  "rich>=13",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
include = ["ml_logger*"]

[tool.setuptools.package-data]
ml_logger = ["configs/*.yaml"]
